--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="left">
       <button id="btn-help" aria-label="How to play" title="How to play">?</button>
     </div>
-    <h1 aria-label="Game title">Wordle‑ish</h1>
+    <h1 aria-label="Game title">ALS-WORDLE-GAME</h1>
     <div class="right">
       <button id="btn-stats" aria-label="Statistics" title="Statistics">★</button>
       <button id="btn-settings" aria-label="Settings" title="Settings">⚙</button>
