--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button id="btn-help" aria-label="How to play" title="How to play">?</button>
     </div>
     <h1 aria-label="Game title">ALS-WORDLE-GAME</h1>
+    <p id="hint" class="hint" aria-live="polite"></p>
     <div class="right">
       <button id="btn-stats" aria-label="Statistics" title="Statistics">★</button>
       <button id="btn-settings" aria-label="Settings" title="Settings">⚙</button>
